# ArduinoPixels

./: .gitignore  CMakeLists.txt  README.md  build.sh
PixelDisplayGame/: PixelDisplayGame.ino
assets/: hshb_hardware.fzz
assets/wedding/: Interface.xcf  Menu.xcf  TextBoyWins.xcf  TextGirlWins.xcf  TextInvasion.xcf  TextYouWin.xcf  brideWalk.xcf  groomWalk.xcf
cinder/classgenerator/: CMakeLists.txt
cinder/classgenerator/src/: classgeneratorApp.cpp
cinder/pixelgame/src/: pixelgameApp.cpp
cinder/pixelgame/vc11/pixelGameApp/: pixelGameApp.vcxproj
libraries/PixelGame/: CMakeLists.txt  Makefile  NeopixelPixelRenderer.cpp  NeopixelPixelRenderer.h  NeuroPixelRenderer.cpp  NeuroPixelRenderer.h  PixelGameInclude.h  PixelRenderer.cpp  PixelRenderer.h  SDLPixelRenderer.cpp  SDLPixelRenderer.h  SoundPlayer.h
libraries/PixelGame/vc11/PixelGame/: PixelGame.vcxproj
libraries/PixelShared/: Alien.h  Alien1.h  Alien2.h  Alien3.h  AlienPond.h  Array.h  Blood.h  CMakeLists.txt  Cloud.h  DataAlien1Dead.h  DataAlien1Feed.h  DataAlien1Head.h  DataAlien2Dead.h  DataAlien2Feed.h  DataAlien2Head.h  DataAlienShoot1.h  DataAlienShoot2.h  DataBackGrass.h  DataBackSky.h  DataBackSpace.h  DataBlood1.h  DataBlood2.h  DataBlood3.h  DataBoyDeath.h  DataBoyShoot1.h  DataBoyShoot2.h  DataBush.h  DataCity.h  DataCloud1.h  DataDuckBig.h  DataDuckSmall.h  DataGirlCrouch.h  DataGirlCrouchBlock.h  DataGirlCrouchHit.h  DataGirlCrouchKick.h  DataGirlCrouchWalk1.h  DataGirlCrouchWalk2.h  DataGirlDeath.h  DataGirlGotHit1.h  DataGirlGotHit2.h  (+97 more)
libraries/PixelShared/vc11/PixelShared/: PixelShared.vcxproj
pixelApp/: CMakeLists.txt  Makefile  Makefile.osx  main.cpp
pixelGameControler/: DrumNote.h  music.h  note.h  pixelGameControler.ino
vc11/ArduinoPixels/: ArduinoPixels.sln
